@@ -1,3 +1,10 @@
+2002-12-01  Mikhael Goikhman  <migo@homemail.com>
+
+	* libs/FBidi.c (FBidiConvert):
+	several small changes
+	* libs/FBidiJoin.c (shape_n_join):
+	enabled a new bidi shaping code
+
 2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/frame.c (frame_restore_client_gravities):
